Made read all notifications handler
